--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,7 +17,7 @@
         tools:layout="@layout/fragment_feed" />
     <fragment
         android:id="@+id/postFragment"
-        android:name="com.example.munch.ui.PostFragment"
+        android:name="com.example.munch.post.PostFragment"
         android:label="fragment_post"
         tools:layout="@layout/fragment_post" />
 </navigation>
