--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
         android:id="@+id/searchFragment"
-        android:icon="@drawable/search_icon"
+        android:icon="@drawable/ic_search"
         android:title="Search" />
-
     <item
         android:id="@+id/feedFragment"
-        android:icon="@drawable/feed_icon"
+        android:icon="@drawable/ic_feed"
         android:title="Feed" />
-
     <item
         android:id="@+id/postFragment"
-        android:icon="@drawable/add_circle_icon"
+        android:icon="@drawable/ic_post"
         android:title="Post" />
-
+    <item
+        android:id="@+id/savedFragment"
+        android:icon="@drawable/ic_saved"
+        android:title="Saved" />
 </menu>
